# 2026-07-Colibri

./: .gitignore  README.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml
config/: dev.target.yml  prod.target.yml
notebooks/jobs/: 01_ingest_bronze.py  02_build_silver.py  03_build_gold.py  _bootstrap.py
resources/: job.yml  schemas.yml  volumes.yml
src/colibri_wind/: __init__.py  schemas.py  transforms.py
tests/: conftest.py  test_schemas.py  test_transforms.py
