[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "colibri-wind"
version = "0.1.0"
description = "Databricks notebook pipeline for wind turbine telemetry."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = ["pyspark>=3.5,<4.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"notebooks/jobs/*.py" = ["F821"]
